--- a/Morgan/MainWindow.xaml
+++ b/Morgan/MainWindow.xaml
@@ -152,7 +152,8 @@
         <!-- This is the page hosting location -->
         <Frame Content="{Binding CurrentPage, 
             Source={x:Static local:ViewModelBag.ApplicationViewModel},
-            Converter={local:ApplicationPageToPageConverter}}"/>
+            Converter={local:ApplicationPageToPageConverter}}"
+            NavigationUIVisibility="Hidden"/>
 
     </Grid>
 
