--- a/Morgan/Styles/Texts.xaml
+++ b/Morgan/Styles/Texts.xaml
@@ -48,7 +48,7 @@
     </Style>
     
     <!-- Unicode values for the icons used in the application -->
-    <System:String x:Key="ApplicationIcon">&#xf233;</System:String>
+    <System:String x:Key="ApplicationIcon">&#xf13f;</System:String>
     <System:String x:Key="ApplicationIcon-Outline">&#xf232;</System:String>
     
 </ResourceDictionary>
