--- a/Morgan/Styles/Fonts.xaml
+++ b/Morgan/Styles/Fonts.xaml
@@ -8,9 +8,8 @@
     <!-- Icon Font -->
     <FontFamily x:Key="Ionicons">pack://application:,,,/Fonts/#Ionicons</FontFamily>
     
-    <!-- Roboto - Default font used in the application UI -->
-    <FontFamily x:Key="RobotoRegular">pack://application:,,,/Fonts/#Roboto Regular</FontFamily>
-    <FontFamily x:Key="RobotoMedium">pack://application:,,,/Fonts/#Roboto Medium</FontFamily>
-    <FontFamily x:Key="RobotoLight">pack://application:,,,/Fonts/#Roboto Light</FontFamily>
+    <!-- Calibri Font -->
+    <FontFamily x:Key="CalibriRegular">pack://application:,,,/Fonts/#Calibri</FontFamily>
+    <FontFamily x:Key="CalibriLight">pack://application:,,,/Fonts/#Calibri Light</FontFamily>
 
 </ResourceDictionary>
