--- a/Morgan/Styles/Buttons.xaml
+++ b/Morgan/Styles/Buttons.xaml
@@ -46,7 +46,7 @@
         <Setter Property="BorderThickness" Value="1 1 1 .7"/>
         <Setter Property="BorderBrush" Value="#444"/>
         <Setter Property="FontSize" Value="13"/>
-        <Setter Property="FontFamily" Value="Calibri"/>
+        <Setter Property="FontFamily" Value="{StaticResource CalibriLight}"/>
         <Setter Property="FontWeight" Value="Light"/>
         <Setter Property="Cursor" Value="Hand"/>
         <Setter Property="local:ButtonAttachedProperties.IsBusy" Value="False"/>
