Bound the IsBusy property of the Browse Button in the BaseFormPage to a property

--- a/Morgan/Pages/BaseFormPage.xaml
+++ b/Morgan/Pages/BaseFormPage.xaml
@@ -102,7 +102,8 @@
                     FontFamily="{StaticResource Ionicons}"
                     Margin="0 20 0 5" Padding="10"
                     HorizontalAlignment="Center"
-                    Command="{Binding AddLocationCommand}"/>
+                    Command="{Binding AddLocationCommand}"
+                    local:ButtonAttachedProperties.IsBusy="{Binding IsLoadingALocation}"/>
 
         </StackPanel>
 
